--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,26 @@
 
 .event-block {
   margin-top: 23%;
+  margin-bottom: 5%;
   background-color: white;
   width: 100%; }
 
 .event-box {
   text-align: left;
-  padding: 0% 4%; }
+  margin: 0 5%; }
 
 .map-size {
   position: relative;
   width: 100%;
   height: 0; }
+
+@media (min-device-width: 641px) {
+  .event-block {
+    margin: 15% 0 5% 0; } }
+
+@media (min-width: 1025px) {
+  .event-block {
+    margin: 10% 0 3% 0; } }
 
 .event-border {
   border-bottom: solid grey 1px;
@@ -40,9 +49,9 @@
 
 .show-details {
   margin: 25% 5% 0 5%;
-  padding: 8px;
+  padding: 15px;
   background-color: whitesmoke;
-  border-radius: 5%; }
+  border-radius: 10px; }
   .show-details h1 {
     font-family: 'Orbitron', sans-serif;
     font-size: 20px;
@@ -62,9 +71,9 @@
 
 .edit-box {
   margin: 25% 5% 0 5%;
-  padding: 8px;
+  padding: 15px;
   background-color: whitesmoke;
-  border-radius: 5%; }
+  border-radius: 10px; }
   .edit-box p {
     font-family: 'Orbitron', sans-serif;
     font-size: 14px;
@@ -84,6 +93,42 @@
     font-weight: 300;
     color: grey;
     width: 98%; }
+
+@media (min-device-width: 641px) {
+  .show-details {
+    margin: 15% 5% 0 5%; }
+    .show-details h1 {
+      font-size: 28px; }
+    .show-details p {
+      font-size: 18px; }
+    .show-details h6 {
+      font-size: 20px; }
+  .edit-box {
+    margin: 15% 5% 0 5%; }
+    .edit-box p {
+      font-size: 20px; }
+    .edit-box textarea {
+      font-size: 22px; }
+    .edit-box input {
+      font-size: 22px; } }
+
+@media (min-width: 1025px) {
+  .show-details {
+    margin: 10% 5% 0 5%; }
+    .show-details h1 {
+      font-size: 36px; }
+    .show-details p {
+      font-size: 26px; }
+    .show-details h6 {
+      font-size: 28px; }
+  .edit-box {
+    margin: 10% 5% 0 5%; }
+    .edit-box p {
+      font-size: 26px; }
+    .edit-box textarea {
+      font-size: 28px; }
+    .edit-box input {
+      font-size: 28px; } }
 
 .menu-wrapper {
   position: absolute;
@@ -191,6 +236,7 @@ header {
   .leftie .header-box {
     margin: 0 40px;
     font-family: 'Roboto', sans-serif;
+    color: grey;
     font-size: 20px;
     text-transform: uppercase;
     border: none;
@@ -213,7 +259,9 @@ header {
     header h1 {
       font-size: 58px; }
   .menu-wrapper {
-    display: none; } }
+    display: none; }
+  .leftie .header-box {
+    font-size: 25px; } }
 
 .promise {
   background-image: url(https://i.imgur.com/kZn7d4b.jpg);
@@ -382,20 +430,21 @@ header {
     line-height: 15%;
     font-size: 3em; }
   .cat-box {
-    width: 45%;
+    width: 44%;
     font-size: 60px; } }
 
 .each-box {
   background-color: whitesmoke;
   padding: 3px;
   margin: 3px;
-  border-radius: 5%; }
+  border-radius: 10px; }
   .each-box a {
     text-decoration: none; }
   .each-box p {
     font-family: Orbitron, sans-serif;
     font-size: 11px;
-    color: grey; }
+    color: #37bdcc;
+    padding-left: 2%; }
   .each-box h6 {
     margin: 0;
     padding: 0;
@@ -403,6 +452,18 @@ header {
     font-weight: 300;
     font-size: 12px;
     color: grey; }
+
+@media (min-device-width: 641px) {
+  .each-box p {
+    font-size: 16px; }
+  .each-box h6 {
+    font-size: 18px; } }
+
+@media (min-width: 1025px) {
+  .each-box p {
+    font-size: 18px; }
+  .each-box h6 {
+    font-size: 20px; } }
 
 .reservation-flex {
   display: flex; }
@@ -412,32 +473,24 @@ header {
   background: linear-gradient(to bottom right, #37bdcc, #2f3483);
   padding: 10% 4%;
   height: 80vh; }
-
-.reservation-title {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  font-size: 6px;
-  flex-wrap: wrap;
-  padding-bottom: 20%;
-  color: white; }
-
-.profile-image {
-  border-radius: 100%;
-  width: 28vw;
-  height: 15vh; }
+  .left-block .reservation-title {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 6px;
+    flex-wrap: wrap;
+    padding-bottom: 20%;
+    color: white; }
+  .left-block .profile-image {
+    border-radius: 100%;
+    width: 28vw;
+    height: 15vh; }
 
 .right-block {
   margin-top: 85px;
   background-color: whitesmoke;
   width: 100%; }
-
-.reserved-event {
-  text-align: left;
-  color: grey;
-  padding: 0% 4%;
-  font-size: 9px; }
 
 .alert {
   position: absolute;
@@ -454,34 +507,99 @@ header {
   text-align: center;
   color: #53aeaf; }
 
+@media (min-device-width: 641px) {
+  .left-block {
+    margin-top: 12%;
+    padding: 10% 2%; }
+    .left-block .reservation-title {
+      letter-spacing: 3px;
+      font-size: 14px; }
+    .left-block .profile-image {
+      width: 23vw;
+      height: 29vh; }
+  .right-block {
+    margin-top: 123px;
+    background-color: whitesmoke;
+    width: 100%; } }
+
+@media (min-width: 1025px) {
+  .left-block {
+    margin-top: 6%;
+    padding: 10% 2%; }
+    .left-block .reservation-title {
+      letter-spacing: 3px;
+      font-weight: 300;
+      font-size: 18px; }
+    .left-block .profile-image {
+      width: 18vw;
+      height: 27vh; }
+  .right-block {
+    margin-top: 151px;
+    background-color: whitesmoke;
+    width: 100%; } }
+
 .add-event-page {
-  margin-top: 23%;
-  margin-left: 5%; }
-  .add-event-page p {
-    font-family: 'Orbitron', sans-serif;
-    font-size: 14px;
-    color: #37bdcc;
-    margin-bottom: 0; }
+  margin: 25% 5% 0 5%;
+  padding: 15px;
+  background-color: whitesmoke;
+  border-radius: 10px; }
   .add-event-page select {
     font-family: 'Roboto', sans-serif;
     font-size: 13px;
     color: grey; }
+  .add-event-page p {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 14px;
+    color: #2f3483;
+    margin: 5px 0 5px 0; }
+  .add-event-page textarea {
+    font-family: Roboto;
+    font-size: 14px;
+    color: grey;
+    font-weight: 300;
+    width: 98%; }
   .add-event-page input {
-    font-family: 'Roboto', sans-serif;
-    font-size: 13px;
-    color: grey; }
+    margin: 0 0 10px 0;
+    padding: 0;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 300;
+    color: grey;
+    width: 98%; }
+
+@media (min-device-width: 641px) {
+  .add-event-page {
+    margin: 15% 5% 0 5%; }
+    .add-event-page p {
+      font-size: 18px; }
+    .add-event-page select {
+      font-size: 20px; }
+    .add-event-page input {
+      font-size: 20px; }
+    .add-event-page textarea {
+      font-size: 20px; } }
+
+@media (min-width: 1025px) {
+  .add-event-page {
+    margin: 10% 5% 0 5%; }
+    .add-event-page h1 {
+      font-size: 36px; }
+    .add-event-page p {
+      font-size: 26px; }
+    .add-event-page h6 {
+      font-size: 28px; } }
 
 .complete-button {
   font-family: Orbitron, sans-serif;
   font-size: 14px;
-  color: #2f3483;
+  color: #37bdcc;
   float: right;
   margin-right: 5%; }
 
 .reserve-button {
   font-family: Orbitron, sans-serif;
   font-size: 14px;
-  color: grey;
+  color: #37bdcc;
   margin-top: 10px;
   margin-bottom: 5px;
   width: 100%; }
@@ -489,35 +607,66 @@ header {
 .delete-button-2 {
   font-family: Orbitron, sans-serif;
   font-size: 14px;
-  color: grey;
+  color: #37bdcc;
   margin-bottom: 5px;
   width: 100%; }
 
 .edit-button {
   font-family: Orbitron, sans-serif;
   font-size: 14px;
-  color: grey;
+  color: #37bdcc;
   margin-bottom: 5px;
   width: 100%; }
 
 .add-button {
+  margin-top: 2%;
   font-family: Orbitron, sans-serif;
   font-size: 14px;
-  color: grey;
+  color: #2f3483;
   width: 100%; }
 
 .delete-button {
   font-family: Orbitron, sans-serif;
   font-size: 10px;
-  color: grey;
+  color: #2f3483;
   float: right;
   margin-right: 5%; }
 
 .pay-button {
   font-family: Orbitron, sans-serif;
   font-size: 10px;
-  color: grey;
+  color: #2f3483;
   float: left; }
+
+@media (min-device-width: 641px) {
+  .complete-button {
+    font-size: 20px;
+    border: none;
+    background: transparent; }
+  .reserve-button {
+    font-size: 20px;
+    border: none;
+    background: transparent; }
+  .delete-button-2 {
+    font-size: 20px;
+    border: none;
+    background: transparent; }
+  .edit-button {
+    font-size: 20px;
+    border: none;
+    background: transparent; }
+  .add-button {
+    font-size: 20px;
+    border: none;
+    background: transparent; }
+  .delete-button {
+    font-size: 20px;
+    border: none;
+    background: transparent; }
+  .pay-button {
+    font-size: 20px;
+    border: none;
+    background: transparent; } }
 
 .App {
   position: flex;
