--- a/src/styles/_Category.scss
+++ b/src/styles/_Category.scss
@@ -4,14 +4,15 @@
  }
  
  .event-block {
-    margin-top: 23%;
+    margin-top: 23% ;
+    margin-bottom: 5%;
     background-color: white;
     width: 100%;
  }
  
  .event-box {
      text-align: left;
-     padding: 0% 4%;
+     margin: 0 5%;
  }
 
  .map-size {
@@ -20,5 +21,17 @@
      height: 0;
  }
 
+ @media(min-device-width : 641px) 
+{
+    .event-block {
+        margin: 15% 0 5% 0;
+     }
+}
 
+@media (min-width:1025px) {
+
+    .event-block {
+        margin: 10% 0 3% 0;
+     }
+}
  
