--- a/src/styles/_EventBoxes.scss
+++ b/src/styles/_EventBoxes.scss
@@ -3,7 +3,7 @@
     background-color: whitesmoke;
     padding: 3px;
     margin: 3px;
-    border-radius: 5%;
+    border-radius: 10px;
 
     a {
         text-decoration: none;
@@ -12,7 +12,8 @@
     p {
         font-family: Orbitron, sans-serif;
         font-size: 11px;
-        color: grey;
+        color: #37bdcc;
+        padding-left: 2%;
     }
     h6 {
         margin: 0;
@@ -21,6 +22,30 @@
         font-weight: 300;
         font-size: 12px;
         color: grey;
+    }
+}
+
+@media(min-device-width : 641px) 
+{
+    .each-box {
+    p {
+        font-size: 16px;  
+    }
+    h6 {
+        font-size: 18px;   
+    }
+}
+}
+
+@media (min-width:1025px) {
+
+    .each-box {
+        p {
+            font-size: 18px;  
+        }
+        h6 {
+            font-size: 20px;   
+        }
     }
 }
 
