--- a/src/styles/_Hamburgers.scss
+++ b/src/styles/_Hamburgers.scss
@@ -4,7 +4,7 @@ $bar-spacing: 10px;
 
 .menu-wrapper {
   position: absolute;
-  top: 5%;
+  top: 30%;
   left: 75%;
   right: 0;
   bottom: 0;
@@ -21,16 +21,12 @@ $bar-spacing: 10px;
   height: $bar-height;
   border-radius: 20%;
   background: grey;
+
 }
 
 .hamburger-menu {
     position: relative;
-    transform: translateY($bar-spacing);
-    transition: all 0ms 300ms;
-  
-  &.animate {
-    background: white; 
-  }
+    transition: 0ms;
 }
 
 .hamburger-menu:before {
@@ -38,7 +34,6 @@ $bar-spacing: 10px;
     position: absolute;
     left: 0;
     bottom: $bar-spacing;
-    transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .hamburger-menu:after {
@@ -46,19 +41,24 @@ $bar-spacing: 10px;
     position: absolute;
     left: 0;
     top: $bar-spacing;
-    transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-.hamburger-menu.animate:after {
-    top: 0;
-    transform: rotate(45deg);
-    transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
+.active {
+    background: white;
 }
 
-.hamburger-menu.animate:before {
+.active:before {
+    background: grey; 
     bottom: 0;
     transform: rotate(-45deg);
-    transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
-}
+  }
+
+  .active:after {
+    background: grey; 
+    top: 0;
+    transform: rotate(45deg);
+  }
+
+
 
 // https://codepen.io/husnimun/pen/pJvEeL
