--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,15 @@
     margin: 15% 0 5% 0; } }
 
 @media (min-width: 1025px) {
+  .category-flex {
+    display: flex;
+    flex-direction: row; }
   .event-block {
-    margin: 10% 0 3% 0; } }
+    margin: 10% 0 3% 0; }
+  .map-size {
+    margin: 10.5% 0 3% 0;
+    position: relative;
+    width: 100%; } }
 
 .event-border {
   border-bottom: solid grey 1px;
@@ -67,7 +74,8 @@
     font-family: Roboto;
     font-size: 14px;
     font-weight: 300;
-    color: grey; }
+    color: grey;
+    white-space: pre-line; }
 
 .edit-box {
   margin: 25% 5% 0 5%;
@@ -116,19 +124,20 @@
   .show-details {
     margin: 10% 5% 0 5%; }
     .show-details h1 {
-      font-size: 36px; }
+      font-size: 36px;
+      margin-bottom: 2%; }
     .show-details p {
-      font-size: 26px; }
+      font-size: 16px; }
     .show-details h6 {
-      font-size: 28px; }
+      font-size: 18px; }
   .edit-box {
     margin: 10% 5% 0 5%; }
     .edit-box p {
-      font-size: 26px; }
+      font-size: 16px; }
     .edit-box textarea {
-      font-size: 28px; }
+      font-size: 18px; }
     .edit-box input {
-      font-size: 28px; } }
+      font-size: 18px; } }
 
 .menu-wrapper {
   position: absolute;
@@ -239,6 +248,26 @@ header {
     text-transform: uppercase;
     border: none;
     background: transparent; }
+  .leftie button {
+    text-decoration: none;
+    position: relative; }
+    .leftie button:before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      bottom: 0;
+      left: 0;
+      background-color: grey;
+      visibility: hidden;
+      -webkit-transform: scaleX(0);
+      transform: scaleX(0);
+      -webkit-transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+      transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s; }
+    .leftie button:hover:before {
+      visibility: visible;
+      -webkit-transform: scaleX(1);
+      transform: scaleX(1); }
 
 @media (min-device-width: 641px) {
   header h1 {
@@ -255,11 +284,11 @@ header {
   header {
     padding-top: 1%; }
     header h1 {
-      font-size: 58px; }
+      font-size: 50px; }
   .menu-wrapper {
     display: none; }
   .leftie .header-box {
-    font-size: 25px; } }
+    font-size: 22px; } }
 
 .promise {
   background-image: url(https://i.imgur.com/kZn7d4b.jpg);
@@ -412,6 +441,18 @@ header {
 .cat-4 {
   background-image: url("./images/live.png"); }
 
+@keyframes pulse {
+  25% {
+    transform: scale(1.02); }
+  75% {
+    transform: scale(0.98); } }
+
+.pulse:hover {
+  animation-name: pulse;
+  animation-duration: 1.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite; }
+
 @media (min-device-width: 641px) {
   .promise {
     margin-top: 13%;
@@ -423,30 +464,23 @@ header {
 
 @media (min-width: 1025px) {
   .promise {
-    margin-top: 9%;
-    padding: 7% 0 6% 0;
-    line-height: 15%;
-    font-size: 3em; }
+    margin-top: 8%;
+    padding: 7% 0 5% 0;
+    line-height: 7%;
+    font-size: 2em;
+    letter-spacing: 0.5rem; }
   .cat-box {
-    width: 44%;
-    font-size: 60px; } }
-
-@media (min-width: 1200px) {
-  .promise {
-    margin-top: 6.5%;
-    padding: 8% 0 6% 0;
-    line-height: 15%;
-    font-size: 3.5em; }
-  .cat-box {
-    margin-top: 1%;
+    margin-top: 2%;
     width: 23%;
-    font-size: 40px; } }
+    font-size: 30px; } }
 
 .each-box {
   background-color: whitesmoke;
   padding: 3px;
   margin: 3px;
   border-radius: 10px; }
+  .each-box:hover {
+    background-color: #e5e3e3; }
   .each-box a {
     text-decoration: none; }
   .each-box p {
