--- a/src/styles/_Category.scss
+++ b/src/styles/_Category.scss
@@ -30,8 +30,19 @@
 
 @media (min-width:1025px) {
 
+    .category-flex {
+        display: flex;
+        flex-direction: row;
+     }
+
     .event-block {
         margin: 10% 0 3% 0;
      }
+
+     .map-size {
+        margin: 10.5% 0 3% 0;
+        position: relative;
+        width:100%;
+    }
 }
  
