--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -74,8 +74,32 @@ header {
         border: none;
         background: transparent;
     }
-}
+    button {
+        text-decoration: none;
+        position: relative;
 
+        &:before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            bottom: 0;
+            left: 0;
+            background-color: grey;
+            visibility: hidden;
+            -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+            -webkit-transition: all .5s cubic-bezier(1,.25,0,.75) 0s;
+            transition: all .5s cubic-bezier(1,.25,0,.75) 0s;
+            }
+            &:hover:before {
+            visibility: visible;
+            -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+            }
+
+        }
+    }
 
 @media(min-device-width : 641px) 
 {
@@ -107,7 +131,7 @@ header {
         padding-top: 1%;
         
         h1 {
-            font-size: 58px;
+            font-size: 50px;
         }
 
      }
@@ -117,7 +141,7 @@ header {
 
     .leftie {
         .header-box {
-            font-size: 25px;
+            font-size: 22px;
         }
     }
 }
