--- a/src/styles/_Reservations.scss
+++ b/src/styles/_Reservations.scss
@@ -29,8 +29,8 @@
 
 .right-block {
     margin-top: 85px; 
-    background-color: whitesmoke;
     width:100%;
+
 }
 
 .alert {
@@ -69,7 +69,7 @@
 
     .right-block {
         margin-top: 123px; 
-        background-color: whitesmoke;
+        // background-color: whitesmoke;
         width:100%;
     }
 
@@ -105,7 +105,6 @@
     
     .right-block {
         margin-top: 130px; 
-        background-color: whitesmoke;
         width:100%;
     }
 
