--- a/src/styles/_Category.scss
+++ b/src/styles/_Category.scss
@@ -44,5 +44,10 @@
         position: relative;
         width:100%;
     }
+
+    .map-block {
+        position: fixed;
+        width: 47vw;
+    }
 }
  
