--- a/src/styles/_Buttons.scss
+++ b/src/styles/_Buttons.scss
@@ -46,8 +46,8 @@
     margin-right: 2%;
     font-weight: 300;
     font-family: Orbitron, sans-serif;
-    font-size: 40px;
-    color: #37bdcc;
+    font-size: 20px;
+    color: #4eb5ed;
 }
 
 .checkout-body {
