--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,15 @@
   position: relative;
   width: 100%;
   height: 0; }
+  .map-size div {
+    border-radius: 10px !important;
+    margin: 0 !important; }
+
+.gm-style {
+  font-family: 'Orbitron', sans-serif !important;
+  color: #2f3483 !important; }
+  .gm-style h1 {
+    font-size: 1.5em !important; }
 
 @media (min-device-width: 641px) {
   .event-block {
