--- a/src/styles/_Category.scss
+++ b/src/styles/_Category.scss
@@ -19,7 +19,21 @@
      position: relative;
      width:100%;
      height: 0;
+
+     div {
+         border-radius: 10px !important;
+         margin: 0 !important;
+     }
  }
+
+ .gm-style {
+    font-family: 'Orbitron', sans-serif !important;
+    color: #2f3483 !important;
+
+    h1 {
+        font-size: 1.5em !important;
+    }
+}
 
  @media(min-device-width : 641px) 
 {
@@ -49,5 +63,6 @@
         position: fixed;
         width: 47vw;
     }
+
 }
  
