--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -73,6 +73,8 @@ header {
         text-transform: uppercase;
         border: none;
         background: transparent;
+        font-weight: 300;
+        text-shadow: 0.5px 1px #807d7e;
     }
     button {
         text-decoration: none;
