--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -74,7 +74,7 @@ header {
         border: none;
         background: transparent;
         font-weight: 300;
-        text-shadow: 0.5px 1px #807d7e;
+        text-shadow: 1px 1px 1 #807d7e;
     }
     button {
         text-decoration: none;
