--- a/src/App.css
+++ b/src/App.css
@@ -730,6 +730,13 @@ header {
   margin-right: 2%;
   margin-top: -40px; }
 
+.send-button {
+  margin-top: 2%;
+  font-family: Orbitron, sans-serif;
+  font-size: 14px;
+  color: #2f3483;
+  width: 100%; }
+
 @media (min-device-width: 641px) {
   .complete-button {
     font-size: 20px;
@@ -756,6 +763,10 @@ header {
     border: none;
     background: transparent; }
   .pay-button {
+    font-size: 20px;
+    border: none;
+    background: transparent; }
+  .send-button {
     font-size: 20px;
     border: none;
     background: transparent; } }
