--- a/src/App.css
+++ b/src/App.css
@@ -592,42 +592,39 @@ header {
     font-size: 2.5em;
     line-height: 60px; } }
 
-@media (min-device-width: 1024px) {
-  .right-block {
-    margin-top: 120px;
-    padding-left: 280px;
-    width: 100%; }
+@media (min-device-width: 1000px) {
   .left-block {
     margin-top: 12%;
     padding: 10% 2%;
-    width: 23vw; }
+    width: 22vw; }
+    .left-block .reservation-title {
+      letter-spacing: 3px;
+      font-size: 14px; }
     .left-block .profile-image {
-      width: 22.5vw;
-      height: 24vh; } }
+      width: 22vw;
+      height: 30vh; }
+  .right-block {
+    margin-top: 120px;
+    padding-left: 270px;
+    padding-right: 1%;
+    width: 100%; } }
 
 @media (min-width: 1025px) {
   .left-block {
-    margin-top: 6%;
+    margin-top: 9%;
     padding: 10% 2%;
-    height: 200vh; }
+    width: 22vw; }
     .left-block .reservation-title {
-      letter-spacing: 2px;
-      font-weight: 300;
-      font-size: 12px; }
+      letter-spacing: 3px;
+      font-size: 14px; }
     .left-block .profile-image {
-      width: 17vw;
-      height: 30vh;
-      margin: 0 auto; }
+      width: 22vw;
+      height: 30vh; }
   .right-block {
     margin-top: 130px;
-    width: 100%;
-    padding-left: 390px; }
-  .alert {
-    margin-top: 2.5%;
-    padding: 60px 350px;
-    height: 250px;
-    font-size: 4.5em;
-    line-height: 120%; } }
+    padding-left: 380px;
+    padding-right: 1%;
+    width: 100%; } }
 
 .add-event-page {
   margin: 25% 5% 0 5%;
