--- a/src/styles/_Reservations.scss
+++ b/src/styles/_Reservations.scss
@@ -88,58 +88,52 @@
 
 }
 
-@media(min-device-width : 1024px)  {
-    .right-block {
-        margin-top: 120px; 
-        padding-left: 280px;
-        width:100%;
-    }
+@media(min-device-width : 1000px)  {
     .left-block {
         margin-top: 12%;
         padding: 10% 2%;
-        width: 23vw;
-
-    .profile-image {
-        width: 22.5vw;
-        height: 24vh;
-    }
-}
-
-}
-
-@media (min-width:1025px) {
-
-    .left-block {
-        margin-top: 6%;
-        padding: 10% 2%;
-        height: 200vh;
+        width: 22vw;
 
         .reservation-title {
-            letter-spacing: 2px;
-            font-weight: 300;
-            font-size: 12px;
+            letter-spacing: 3px;
+            font-size: 14px;
         }
 
         .profile-image {
-            width: 17vw;
+            width: 22vw;
             height: 30vh;
-            margin: 0 auto;
+        }
+    }
+
+    .right-block {
+        margin-top: 120px; 
+        padding-left: 270px;
+        padding-right: 1%;
+        width:100%;
+    }
+}
+
+@media (min-width:1025px) {
+    .left-block {
+        margin-top: 9%;
+        padding: 10% 2%;
+        width: 22vw;
+
+        .reservation-title {
+            letter-spacing: 3px;
+            font-size: 14px;
         }
 
+        .profile-image {
+            width: 22vw;
+            height: 30vh;
+        }
     }
-    
+
     .right-block {
         margin-top: 130px; 
+        padding-left: 380px;
+        padding-right: 1%;
         width:100%;
-        padding-left: 390px;
     }
-
-    .alert {
-        margin-top: 2.5%;
-        padding: 60px 350px ;
-        height: 250px;
-        font-size: 4.5em;
-        line-height: 120%;
-    }
-
 }
