--- a/src/styles/_Reservations.scss
+++ b/src/styles/_Reservations.scss
@@ -120,13 +120,14 @@
         width: 22vw;
 
         .reservation-title {
-            letter-spacing: 3px;
+            letter-spacing: 2.75px;
             font-size: 14px;
         }
 
         .profile-image {
-            width: 22vw;
-            height: 30vh;
+            width: 15vw;
+            height: 20vh;
+            margin-left: 40px;
         }
     }
 
