--- a/src/styles/_Buttons.scss
+++ b/src/styles/_Buttons.scss
@@ -64,6 +64,12 @@
     width: 100%;  
 }
 
+.choose-file {
+    margin-top: 2% !important;
+    font-family: Roboto !important;
+    color: grey !important;
+}
+
 @media(min-device-width : 641px) 
 {
     .complete-button {
