--- a/src/styles/_EventDetails.scss
+++ b/src/styles/_EventDetails.scss
@@ -28,8 +28,10 @@
     }
 
     img {
+        display: block;
         max-width: 300px;
         border-radius: 10px;
+        margin: 0 auto;    
     }
 }
 
@@ -83,7 +85,7 @@
             font-size: 20px;
         }
         img {
-            max-width: 700px;
+            max-width: 600px;
         }
     }
 
