--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -121,10 +121,14 @@ header {
     }
 
     .leftie {
-        display: flex;
-        margin: auto 1%;
+        display: inherit;
+
+        .header-box {
+            margin: 3vh 0 0 2vh;
+        }
+
     }
-    }
+}
 
 
 @media (min-width:1025px) {
@@ -144,6 +148,13 @@ header {
     .leftie {
         .header-box {
             font-size: 22px;
+            margin: auto 0;
+        }
+        a {
+            margin: auto 5vh;
+        }
+        div {
+            margin: auto 0;
         }
     }
 }
