--- a/src/styles/_Reservations.scss
+++ b/src/styles/_Reservations.scss
@@ -137,4 +137,12 @@
         padding-right: 1%;
         width:100%;
     }
+
+    .alert {
+        padding-top: 9px;
+        height: 0px;
+        font-size: 1em;
+        line-height: 38px;
+        width: 100%;
+    }
 }
