--- a/src/App.css
+++ b/src/App.css
@@ -228,13 +228,20 @@ header {
   width: 100%;
   padding-top: 3%; }
   header #logo {
-    margin: auto 5%;
+    text-decoration: none;
+    margin: auto 5%; }
+  header h1 {
     white-space: nowrap;
     font-family: 'Orbitron', sans-serif;
-    background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-decoration: none; }
+    -webkit-animation: logo 15s infinite; }
+
+@-webkit-keyframes logo {
+  0% {
+    color: #30CFD0; }
+  50% {
+    color: #330867; }
+  100% {
+    color: #30CFD0; } }
 
 .menu-list {
   position: absolute;
