--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -9,13 +9,20 @@ header {
     padding-top: 3%;
 
     #logo {
+        text-decoration: none;
         margin: auto 5%;
+    }
+
+    h1 {
         white-space: nowrap;
         font-family: 'Orbitron', sans-serif;
-        background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        text-decoration: none;
+        -webkit-animation:logo 15s infinite; 
+    }
+     
+    @-webkit-keyframes logo  {
+        0% {color: #30CFD0;}
+        50% {color: #330867;}
+        100% {color: #30CFD0;}
     }
 
 }
@@ -158,3 +165,4 @@ header {
         }
     }
 }
+
