--- a/src/styles/_Homepage.scss
+++ b/src/styles/_Homepage.scss
@@ -15,7 +15,8 @@
     letter-spacing: 0.3rem;
     font-size: 1.5em;
     color: #ffffff;
-    text-transform: uppercase;
+	text-transform: uppercase;
+	box-shadow: inset 0px -20px 10px -15px;
 }
 
 .verticalFlip{
