--- a/src/styles/_AddEvent.scss
+++ b/src/styles/_AddEvent.scss
@@ -3,6 +3,7 @@
     padding: 15px;
     background-color: whitesmoke;
     border-radius: 10px;
+    height: 82vh;
 
     select {
         
@@ -20,7 +21,6 @@
 
     textarea {
         font-family: Roboto;
-     
         font-size: 14px;
         color: grey;
         font-weight: 300;
