--- a/src/styles/_Buttons.scss
+++ b/src/styles/_Buttons.scss
@@ -36,7 +36,7 @@
     margin-top: 2%;
     font-family: Orbitron, sans-serif;
     font-size: 14px;
-    color: #2f3483;
+    color: #37bdcc;
     width: 100%;
 }
 
