--- a/src/styles/_Category.scss
+++ b/src/styles/_Category.scss
@@ -1,18 +1,22 @@
 .category-flex {
     display: flex;
     flex-direction: column;
+    background-image: url('https://www.technobuffalo.com/wp-content/uploads/2013/02/star.jpg');
+    background-repeat: initial;
  }
  
  .event-block {
-    margin-top: 23% ;
+    margin-top: 30% ;
     margin-bottom: 5%;
-    background-color: white;
+    // background-color: white;
     width: 100%;
+    // background: transparent;
  }
  
  .event-box {
      text-align: left;
      margin: 0 5%;
+     background: transparent;
  }
 
  .map-size {
@@ -47,6 +51,7 @@
     .category-flex {
         display: flex;
         flex-direction: row;
+        background-repeat: round;
      }
 
     .event-block {
