--- a/src/styles/_EventBoxes.scss
+++ b/src/styles/_EventBoxes.scss
@@ -1,6 +1,6 @@
 
 .each-box {
-    background-color: whitesmoke;
+    background-color: rgba(230, 227, 227, 0.7);
     padding: 3px;
     margin: 3px;
     border-radius: 10px;
@@ -15,7 +15,7 @@
     p {
         font-family: Orbitron, sans-serif;
         font-size: 11px;
-        color: #37bdcc;
+        color: #2f3483;
         padding-left: 2%;
     }
     h6 {
@@ -24,7 +24,7 @@
         font-family: Roboto;
         font-weight: 300;
         font-size: 12px;
-        color: grey;
+        color: black;
     }
 }
 
