--- a/src/styles/_Reservations.scss
+++ b/src/styles/_Reservations.scss
@@ -7,10 +7,12 @@
 .left-block {
     position: fixed;
     margin-top: 23%;
-    background: linear-gradient(to bottom right, #37bdcc, #2f3483);
+    background-image: url('https://www.technobuffalo.com/wp-content/uploads/2013/02/star.jpg');
+    background-repeat: initial;
     padding: 10% 4%;
     height: 90vh;
     width: 28vw;
+    box-shadow: inset 0px 1px 10px 1px grey;
 
     .reservation-title {
         margin:0;
